Created list for gestures.

--- a/RPSLS/RPSLS.csproj
+++ b/RPSLS/RPSLS.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Player.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="PlayerComputer.cs" />
+    <Compile Include="PlayerGesture.cs" />
+    <Compile Include="PlayerHuman.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
